overflow fixed

--- a/style.css
+++ b/style.css
@@ -667,7 +667,7 @@ ion-icon {
   background-repeat: no-repeat;
   min-height: 300px;
   margin-top: 2vh;
-  min-width: 420px;
+  min-width: 340px;
 }
 .project-overlay {
   background-color: rgba(255, 255, 255, 0.8);
